only show pharmacy map when search is run

--- a/app/views/admin/dashboard/pharmacy_search.js.erb
+++ b/app/views/admin/dashboard/pharmacy_search.js.erb
@@ -31,6 +31,8 @@ function initMap() {
     map: map,
     icon: 'http://maps.google.com/mapfiles/ms/micons/blue-dot.png'
   })
+
+  document.getElementById('pharmacy-map').style.display = "block"
 }
 
 initMap();
