added a legend to the pharmacy map

--- a/app/views/admin/dashboard/_pharmacy_search_map.html.erb
+++ b/app/views/admin/dashboard/_pharmacy_search_map.html.erb
@@ -1,16 +1,29 @@
-<div id="map">
-  <%# center = "#{pharmacy.latitude},#{pharmacy.longitude}" %>
-  <%# my_url = "https://maps.googleapis.com/maps/api/staticmap?&size=640x640&sensor=false&zoom=10" %>
-  <%# @pharmacy.each do |pharmacy| %>
-  <%# my_url += "&markers=color:blue%7Clabel:S%7C#{params[:search]}&markers=#{pharmacy.latitude}%2C#{pharmacy.longitude}&key=AIzaSyC0C-SkI5TYEeRaIft86MsCGUEVzEbRFMo" %>
-  <%# end %>
-  <%#= image_tag my_url %>
-</div>
+<div id="map"></div>
 
-<div id="legend"></div>
+<div id="legend">
+  <span>LEGEND</span>
+  <p><img src="http://maps.google.com/mapfiles/ms/micons/blue-dot.png" alt="google-maps-blue-marker" />Postcode Search</p>
+  <p><img src="http://maps.google.com/mapfiles/ms/micons/red-dot.png" alt="google-maps-red-marker" />Nearby Pharmacies</p>
+</div>
 
 <style>
   #map {
     height:600px;
+  }
+
+  #legend {
+    padding:16px;
+  }
+
+  #legend span {
+    font-size: 0.875rem;
+    color: rgba(0, 0, 0, 0.54);
+    font-weight: 500;
+    line-height: 16px;
+  }
+
+  #pharmacy-map-column {
+    align-items: center;
+    display:none;
   }
 </style>
