--- a/app/views/admin/dashboard/_pharmacy_search_map.html.erb
+++ b/app/views/admin/dashboard/_pharmacy_search_map.html.erb
@@ -23,7 +23,12 @@
   }
 
   #pharmacy-map-column {
-    align-items: center;
+    /*align-items: center;*/
     display:none;
+    left: 49.25%;
+    position: sticky;
+    top: 10px;
+    height: 500px;
   }
 </style>
+
