if no nearby pharmacy is found, display a message

--- a/app/views/admin/dashboard/_pharmacy_search_results.html.erb
+++ b/app/views/admin/dashboard/_pharmacy_search_results.html.erb
@@ -1,6 +1,10 @@
-<% if @result.class == String%>
+<% if @geocode_postcode.empty? %>
   <div class="flash">
     <%= @result %>
+  </div>
+<% elsif !@geocode_postcode.empty? && @pharmacy.empty? %>
+  <div class="flash">
+    Oops! No nearby pharmacys found, please widen your search!
   </div>
 <% end %>
 
