Map will only be shown with successful results returned from query

--- a/app/views/admin/dashboard/_pharmacy_search_results.html.erb
+++ b/app/views/admin/dashboard/_pharmacy_search_results.html.erb
@@ -1,11 +1,13 @@
-<% if @geocode_postcode.empty? %>
-  <div class="flash">
-    <%= @result %>
-  </div>
-<% elsif !@geocode_postcode.empty? && @pharmacy.empty? %>
-  <div class="flash">
-    Oops! No nearby pharmacys found, please widen your search!
-  </div>
+<% if params[:search].present? %>
+  <% if @geocode_postcode.empty? %>
+    <div class="flash">
+      <%= @result %>
+    </div>
+  <% elsif !@geocode_postcode.empty? && @pharmacy.empty? %>
+    <div class="flash">
+      Oops! No nearby pharmacys found, please widen your search!
+    </div>
+  <% end %>
 <% end %>
 
 <table>
